--- a/my_resume.html
+++ b/my_resume.html
@@ -8,7 +8,7 @@
 <dl>
 <dt>Divyashree.J</dt>
 <dt>Masters of Computer Applications</dt>
-<dt>Phone: 7795332991</dt>Phone: 7795332991
+<dt>Phone: 7795332991</dt>
 <dt>Email: divyashreejeevanathan@gmail.com</dt>
 <dt>LinkedIn profile: www.linkedin.com/in/divyashree-j-875758245</dt>
 </dl>
